[tool.poetry]
name = "xendit"
version = "0.1.4a1"
description = "Xendit REST API Client for Python - Card, Virtual Account, Invoice, Disbursement, Recurring Payments, Payout, EWallet, Balance, Retail Outlets Services https://xendit.github.io/apireference/"
authors = ["Adyaksa Wisanggeni <adyaksa@xendit.co>"]
license = "MIT"
repository = "https://github.com/xendit/xendit-python"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
pytest-cov = "^2.10.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.3"
flake8 = "^3.8.3"
pytest-mock = "^3.1.1"
pre-commit = "^2.5.1"
responses = "^0.10.15"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
