[tool.poetry]
name = "xendit-python"
version = "0.2.1"
description = "Xendit REST API Client for Python - Card, Virtual Account, Invoice, Disbursement, Recurring Payments, Payout, EWallet, Balance, Retail Outlets, Payments API, Services https://xendit.github.io/apireference/"
authors = ["Maahir Ur Rahman <maahir@xendit.co>"]
license = "MIT"
repository = "https://github.com/xendit/xendit-python"
readme = "README.md"
keywords = ["xendit", "sdk"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
packages = [
    { include = "xendit" }
]
[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.3"
flake8 = "^3.8.3"
pytest-mock = "^3.1.1"
pre-commit = "^2.5.1"
responses = "^0.10.15"
pytest-cov = "^2.10.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
